same old changes

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -1471,6 +1471,17 @@ year={1972}
   year={2016}
 }
 
+@article{grimmer2010bayesian,
+  title={A Bayesian hierarchical topic model for political texts: Measuring expressed agendas in Senate press releases},
+  author={Grimmer, Justin},
+  journal={Political Analysis},
+  volume={18},
+  number={1},
+  pages={1--35},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
 
 @article{oliver2016rise,
   title={Rise of the Trumpenvolk: Populism in the 2016 Election},
@@ -2475,5 +2486,117 @@ year={1972}
   booktitle={Proceedings of the ninth ACM international conference on web search and data mining},
   pages={53--62},
   year={2016}
+}
+
+@inproceedings{pang2002thumbs,
+  title={Thumbs up?: sentiment classification using machine learning techniques},
+  author={Pang, Bo and Lee, Lillian and Vaithyanathan, Shivakumar},
+  booktitle={Proceedings of the ACL-02 conference on Empirical methods in natural language processing-Volume 10},
+  pages={79--86},
+  year={2002},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{yang2019xlnet,
+  title={Xlnet: Generalized autoregressive pretraining for language understanding},
+  author={Yang, Zhilin and Dai, Zihang and Yang, Yiming and Carbonell, Jaime and Salakhutdinov, Russ R and Le, Quoc V},
+  booktitle={Advances in neural information processing systems},
+  pages={5754--5764},
+  year={2019}
+}
+
+@inproceedings{sun2019fine,
+  title={How to fine-tune BERT for text classification?},
+  author={Sun, Chi and Qiu, Xipeng and Xu, Yige and Huang, Xuanjing},
+  booktitle={China National Conference on Chinese Computational Linguistics},
+  pages={194--206},
+  year={2019},
+  organization={Springer}
+}
+
+@article{howard2018universal,
+  title={Universal language model fine-tuning for text classification},
+  author={Howard, Jeremy and Ruder, Sebastian},
+  journal={arXiv preprint arXiv:1801.06146},
+  year={2018}
+}
+
+@article{fukuyama2018against,
+  title={Against identity politics: The new tribalism and the crisis of democracy},
+  author={Fukuyama, Francis},
+  journal={Foreign Aff.},
+  volume={97},
+  pages={90},
+  year={2018},
+  publisher={HeinOnline}
+}
+
+@misc{open2016rwa,
+  author = {{OPP}},
+  title = {{Open-Source Psychometrics Project} Answers to Bob Altemeyer's Right-wing Authoritarianism Scale.},
+  year = {2016},
+  note = {Data coletada do repositório, 
+          \url{https://openpsychometrics.org/_rawdata/}},
+}
+
+@misc{wvs2014wave,
+  author = {{WVS}},
+  title = {{World Values Survey} Round six-country-pooled datafile version.},
+  year = {2014},
+  note = {Data coletada do repositório, 
+          \url{http://www.worldvaluessurvey.org}},
+}
+
+@book{inglehart2005modernization,
+  title={Modernization, cultural change, and democracy: The human development sequence},
+  author={Inglehart, Ronald and Welzel, Christian},
+  year={2005},
+  publisher={Cambridge University Press}
+}
+
+@article{foa2017signs,
+  title={The signs of deconsolidation},
+  author={Foa, Roberto Stefan and Mounk, Yascha},
+  journal={Journal of Democracy},
+  volume={28},
+  number={1},
+  pages={5--15},
+  year={2017},
+  publisher={Johns Hopkins University Press}
+}
+
+@article{norris2017western,
+  title={Is Western democracy backsliding? Diagnosing the risks},
+  journal={Journal of Democracy Web Exchange},
+  author={Norris, Pippa},
+  year={2017}
+}
+
+@article{voeten2016people,
+  title={Are people really turning away from democracy?},
+  journal={Journal of Democracy Web Exchange},
+  author={Voeten, Erik},
+  year={2016}
+}
+
+@article{alexander2017myth,
+  title={The myth of deconsolidation: Rising liberalism and the populist reaction},
+  author={Alexander, Amy C and Welzel, Christian},
+  year={2017},
+  journal={Journal of Democracy Web Exchange}
+}
+
+@article{foa2017end,
+  title={The end of the consolidation paradigm},
+  author={Foa, R and Mounk, Yascha},
+  year={2017},
+  journal={Journal of Democracy Web Exchange}
+}
+
+@article{voeten2018populism,
+  title={Populism and Backlashes Against International Courts},
+  author={Voeten, Erik},
+  journal={Perspectives on Politics},
+  year={2018}
 }
 
